fix text alignment in index.html

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1555,3 +1555,11 @@ footer a:hover {
     background-repeat:   no-repeat;
     background-size:     cover;
 }
+
+@media only screen and (max-width: 37.5rem) {
+    .img {
+           position:center ;
+    float: contour;
+    width:  100px;
+    }
+}
